# die-roller

./: CMakeLists.txt  die.blend  die.mtl
src/: dice.hpp  main.c  mesh.cpp
